gobmkida/g3/push_owl
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/push_owl/src/engine/owl.c:5614:76: error: use of undeclared identifier 'local_owl_data'; did you mean 'other_owl_data'?
v8 = ( struct local_owl_data *)memcpy( &v2[owl_stack_pointer], v3, sizeof( local_owl_data)); 
                                                                           ^~~~~~~~~~~~~~
                                                                           other_owl_data
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/push_owl/src/engine/owl.c:102:31: note: 'other_owl_data' declared here
static struct local_owl_data *other_owl_data;
                              ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/push_owl/src/engine/owl.c:5632:27: error: use of undeclared identifier 'local_owl_data'; did you mean 'other_owl_data'?
memcpy( v12, v11, sizeof( local_owl_data)); 
                          ^~~~~~~~~~~~~~
                          other_owl_data
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/push_owl/src/engine/owl.c:102:31: note: 'other_owl_data' declared here
static struct local_owl_data *other_owl_data;
                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/push_owl/src/obj/1/owl.o] Error 1
